<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".clubs">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbarclubs" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="225dp"
            android:height="70dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/bevan"
            android:text="@string/coc"
            android:textColor="#FFFFFF"
            android:textSize="45sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:width="225dp"
            android:height="70dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/bevan"
            android:text="@string/sra"
            android:textColor="#FFFFFF"
            android:textSize="45sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:width="225dp"
            android:height="70dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/bevan"
            android:text="@string/Dla"
            android:textColor="#FFFFFF"
            android:textSize="45sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:width="225dp"
            android:height="70dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/bevan"
            android:text="@string/ieee"
            android:textColor="#FFFFFF"
            android:textSize="45sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:width="225dp"
            android:height="70dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/bevan"
            android:text="@string/aero"
            android:textColor="#FFFFFF"
            android:textSize="45sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button6"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:width="225dp"
            android:height="70dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/bevan"
            android:text="@string/racing"
            android:textColor="#FFFFFF"
            android:textSize="45sp"
            android:textStyle="bold" />


    </LinearLayout>


</RelativeLayout>