<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back3"
    tools:context=".Coc">


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="303dp"
        android:layout_below="@id/imageView3"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="8dp">

    </androidx.viewpager.widget.ViewPager>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        app:srcCompat="@drawable/coc1" />

    <LinearLayout
        android:id="@+id/SliderDots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="418dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="345dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="435dp"
        android:fontFamily="cursive"
        android:text="@string/coc_desp"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/fb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="17dp"
        android:autoLink="all"
        android:clickable="true"
        android:text="@string/fb1"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fb"
        android:layout_marginTop="22dp"
        android:autoLink="all"
        android:clickable="true"
        android:text="@string/ig1"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</RelativeLayout>
</ScrollView>