<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
android:layout_height="fill_parent">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back4"
    tools:context=".Sra">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="313dp"
        android:layout_below="@id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="8dp">

    </androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:id="@+id/SliderDots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="433dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        app:srcCompat="@drawable/sra1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="402dp"
        android:layout_below="@id/SliderDots"
        android:layout_marginTop="35dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="Started in September 2008, the Society of Robotics And Automation, better known as the SRA is a student's society which deals with Robotics, machine vision,  Automation and the allied fields. SRA aims to create awareness and promotes robotics among students at VJTI and other leading colleges in Mumbai.We start right from an introduction to the basics of robotics.We encourage the students to pursue robotics as a serious career choice and give the relevant exposure for the same.  "
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/fb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginTop="17dp"
        android:autoLink="all"
        android:clickable="true"
        android:text="@string/fb1"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fb"
        android:layout_marginTop="26dp"
        android:autoLink="all"
        android:clickable="true"
        android:text="@string/ig1"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/wb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ig"
        android:layout_marginTop="28dp"
        android:autoLink="all"
        android:clickable="true"
        android:text="@string/wb"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</RelativeLayout>
</ScrollView>